--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page5.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page5.html
@@ -1,17 +1,17 @@
 <div class="table-contents">
 	<h1>Contents</h1>
 	<ul>
-		<li><a href="#page/7">The book <span>7</span></a></li>
-		<li><a href="#page/10">Youth<span>10</span></a></li>
-		<li><a href="#page/18">The Apple I <span>18</span></a></li>
-		<li><a href="#page/25">Apple's early days <span>25</span></a></li>
-		<li><a href="#page/30">Success and failures <span>30</span></a></li>
-		<li><a href="#page/38">Macintosh <span>38</span></a></li>
-		<li><a href="#page/40">Leaving Apple  <span>40</span></a></li>
-		<li><a href="#page/43">NeXT Inc <span>43</span></a></li>
-		<li><a href="#page/53">Wildreness years <span>53</span></a></li>
-		<li><a href="#page/73">A visionary <span>73</span></a></li>
-		<li><a href="#page/86">Apple is strong <span>86</span></a></li>
+		<li><a href="#page/7">Eser Hakkında <span>7</span></a></li>
+		<li><a href="#page/10">Romanın Özeti<span>10</span></a></li>
+		<li><a href="#page/18">Kişiler<span>18</span></a></li>
+		<li><a href="#page/25">Zaman<span>25</span></a></li>
+		<li><a href="#page/30">Mekân<span>30</span></a></li>
+		<li><a href="#page/38">Romanın Türü<span>38</span></a></li>
+		<li><a href="#page/40">Konusu<span>40</span></a></li>
+		<li><a href="#page/43">Dil ve Anlatım<span>43</span></a></li>
+		<li><a href="#page/53">Genel Değerlendirme<span>53</span></a></li>
+		<li><a href="#page/73">Sabahattin Ali<span>73</span></a></li>
+		<li><a href="#page/86">Sorular ve Cevaplar<span>86</span></a></li>
 		<li><a href="#page/97">2010: Steve is back<span>97</span></a></li>
 	</ul>
 </div>
