--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page5.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page5.html
@@ -1,17 +1,17 @@
 <div class="table-contents">
 	<h1>İçerik</h1>
 	<ul>
-		<li><a href="#page/7">Eser Hakkında </a></li>
-		<li><a href="#page/10">Romanın Özeti</a></li>
-		<li><a href="#page/18">Kişiler </a></li>
-		<li><a href="#page/25">Zaman </a></li>
-		<li><a href="#page/30">Mekân </a></li>
-		<li><a href="#page/38">Romanın Türü </a></li>
-		<li><a href="#page/40">Konusu  </a></li>
-		<li><a href="#page/43">Dil ve Anlatım </a></li>
-		<li><a href="#page/53">Genel Değerlendirme </a></li>
-		<li><a href="#page/73">Sabahattin Ali </a></li>
-		<li><a href="#page/86">Sorular ve Cevaplar </a></li>
+		<li><a href="#page/7">Eser Hakkında <span>7</span></a></li>
+		<li><a href="#page/10">Romanın Özeti<span>10</span></a></li>
+		<li><a href="#page/18">Kişiler <span>18</span></a></li>
+		<li><a href="#page/25">Zaman <span>25</span></a></li>
+		<li><a href="#page/30">Mekân <span>30</span></a></li>
+		<li><a href="#page/38">Romanın Türü <span>38</span></a></li>
+		<li><a href="#page/40">Konusu  <span>40</span></a></li>
+		<li><a href="#page/43">Dil ve Anlatım <span>43</span></a></li>
+		<li><a href="#page/53">Genel Değerlendirme <span>53</span></a></li>
+		<li><a href="#page/73">Sabahattin Ali <span>73</span></a></li>
+		<li><a href="#page/86">Sorular ve Cevaplar <span>86</span></a></li>
 	</ul>
 </div>
 <span class="page-number">5</span>
