--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page7.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page7.html
@@ -1,14 +1,12 @@
 <div class="book-content">
 
-<h1>The Book</h1>
+<h1>Eser Hakkında</h1>
 
 <p class="capital">
-Steve Jobs is the authorized biography of Steve Jobs. The biography was written at the request of Jobs by acclaimed biographer Walter Isaacson, a former executive at CNN and Time who has written best-selling biographies about Benjamin Franklin and Albert Einstein.
+    İlk olarak 1943 yılında yayınlanan Kürk Mantolu Madonna adlı roman, Sabahattin Ali’nin en çok okunan eserleri arasındadır. Son derece deneyimsiz ve içine kapanık bir yapıya sahip olan Raif Bey ile Almanya’da tanıştığı Maria Puder arasındaki aşkı merkeze alan eser, bu ilişki dışında çeşitli toplumsal konular ve yazarın kendi hayatından kesitlere de yer veriyor.
 </p>
 
-<p>
-Based on more than forty interviews with Jobs conducted over two years—in addition to interviews with more than one hundred family members, friends, adversaries, competitors, and colleagues—Isaacson was given "exclusive and unprecedented" access to Jobs's life. Jobs is said to have encouraged the people interviewed to speak honestly. Although Jobs cooperated with the book, he asked for no control over its content other than the book's cover, and waived the right to read it before it was published.
-</p>
+
 
 </div>
 <span class="page-number">7</span>
