--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page12.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page12.html
@@ -1,18 +1,17 @@
 <div class="book-content">
 
 <p class="no-indent">
-much so that he skipped the 5th grade and went straight to middle school, namely Crittenden Middle School. It was in a poor area. Most kids did not work much there, they were rather fond of bullying other kids, such as the young Steve. One day he came home and declared that if he wasn’t transferred to another school, he would stop going to school altogether. He was 11. Paul and Clara complied, and the Jobses moved to the cozier city of Los Altos, so that Steve could go to Cupertino Junior High. This proved to be decisive for Steve’s future.
+Maria, bu olaydan sonra hastalanıp hastaneye kaldırılır. Aralarındaki ilişki karışık olmasına rağmen, Raif Efendi onun yanından bir an bile ayrılmaz. Bu durum Maria Puder’in gerçek duygularını ortaya çıkarır. Raif Efendi’nin kendisini gerçek bir aşkla, hiçbir karşılık beklemeden sevdiğini anlayan Maria, ona olan aşkını kabullenir. Birkaç gün sonra Raif Efendi’nin babası ölür. Raif Efendi, Türkiye’ye dönmek zorunda kalır. Burada işleri yoluna koyan, evinde Maria’nın kalabileceği şekilde tadilat yaptıran Raif Efendi, onun gelmesini beklemeye başlar. Ancak bir süre sonra mektuplarına da cevap alamaz olur. Türkiye’ye geleceğinin sözünü veren Maria ile Raif Efendi’nin ilişkisi bir anda sona erer.
 </p>
 
 <p>
-As Steve was growing up in Los Altos, he became increasingly curious about the world of electronics that filled his neighbors’ garages. His own
-father introduced him to Heathkits, which fascinated him.
+Raif Efendi, on yıl boyunca hayal kırıklığı içinde yaşar, evlenir ve romanın başında anlatıcının gözünden gördüğümüz duruma gelir. Bir gün Almanya’dan Ankara’ya gelen bir kadından Maria Puder’in öldüğünü, üstelik kendisinden bir de kızı olduğunu öğrenir.
 </p>
 
-<h2>Homestead High</h2>
+
 
 <p>
-When Steve arrived in Homestead High School, he enrolled in a popular electronics class. His teacher was
+Bundan sonra hikâye tekrar anlatıcıya döner ve Raif Efendi’nin ölümüyle sona erer.
 </p>
 
 </div>
