--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page10.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page10.html
@@ -1,20 +1,16 @@
 <div class="book-content">
 
-<h1>Youth</h1>
+<h1>Romanın Özeti</h1>
 
-<h2>The jobs family</h2>
+
 
 <p class="capital">
-Steve Jobs was born on February 24, 1955, in the city of San Francisco. His biological mother was an unwed graduate student named Joanne Simpson,
-and his biological father was either a political science or mathematics professor, a native Syrian named Abdulfattah John Jandali.
+Roman, bankadaki işini kaybetmiş bir anlatıcıyla başlar. Anlatıcı Ankara sokaklarında gezerken, eski okul arkadaşı Hamdi’yi görür. Hamdi ona bir iş ayarlar.
 </p>
 
 
 <p>
-Being born out of wedlock in the puritan America of the 1950s, the baby
-was put up for adoption. Joanne had a college education, and she insisted that the future parents of her boy be just as well educated. Unfortunately,
-the candidates, Paul and Clara Jobs, did not meet her expectations: they were a lower-middle class couple that had settled in the Bay Area after the
-war. Paul was a machinist from the Midwest who had
+Anlatıcı, yeni işinde Raif Efendi adlı bir tercüman ile aynı ofisi paylaşmaktadır. Sık sık hastalanan, sessiz, sakin,  kendi halinde bir adam olan Raif Efendi, etrafındakiler tarafından ezilen, hor görülen, ancak bunlara hiçbir zaman tepki vermeyen, kendisine her söyleneni yapan bir adam olarak tanıtılır.
 </p>
 
 
