--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page11.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page11.html
@@ -1,22 +1,18 @@
 <div class="book-content">
 
 <p class="no-indent">
-not even graduated from high school. In the end, Joanne agreed to have her baby adopted by
-them, under the firm condition that they later send him to college.
+Raif Efendi ile anlatıcı ahbaplık yapmaya başlar. Hasta olduğu günlerde acil çevirileri götürme bahanesiyle anlatıcı, Raif Efendi’nin evine gidip gelmeye başlar. Anlatıcı, Raif Efendi’nin aile hayatını da gözlemleme fırsatı bulur. Karısının bütün ailesiyle birlikte küçücük bir evde yaşayan Raif Efendi, kendi evinde de işyerindeki gibi davranışlara maruz kalmaktadır.
 </p>
 
 <p>
-Paul and Clara called their new son Steven Paul. While Steve was still a toddler, the couple moved to the Santa Clara county, later to be known as
-Silicon Valley. They adopted another baby, a girl called Patti, three years later in 1958.
+Hikâye, Raif Efendi’nin gözünden ilerlemeye devam eder. Gençlik yıllarında baba mesleği olan sabunculuğun modern yöntemlerini öğrenmek için Berlin’e gönderilen Raif Efendi, Almanca öğrenmek bahanesiyle bu işi sürekli erteler. Günlerini galerilere ve müzelere giderek geçirdiği sıralarda, bir sanat galerisinde Kürk Mantolu Madonna’nın otoportresini görür. Günlerce galeriye gelip bu portreye bakan Raif Efendi, daha sonra ressam Maria Puder ile tanışır. İkisi arasında bir ilişki başlar.
 </p>
 
-<h2>Childhood</h2>
 
 <p> 
-<img class="left-pic zoom-this" src="samples/steve-jobs/pics/young.jpg?" width="100" height="113">Steve was quite a turbulent child. He really didn’t care about school for
-some time — until he reached the 4th grade, and had Imogene “Teddy” Hill as a teacher.</p>
+Raif Efendi, Maria Puder’e âşık olmasına karşın, aynı karşılığı göremez. Sürekli birlikte vakit geçiren çift yılbaşı gecesinde de birliktedir. Maria Puder’in ne yaparsa yapsın Raif Efendi’yi sevemediği yönündeki sözleri nedeniyle ayrılırlar.</p>
 
-<p>She did bribe him, with candy and $5 bills from her own money. He quickly became hooked — so</p>
+
 
 </div>
 <span class="page-number">11</span>
