--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page11.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page11.html
@@ -1,16 +1,15 @@
 <div class="book-content">
 
 <p class="no-indent">
-Raif Efendi ile anlatıcı ahbaplık yapmaya başlar. Hasta olduğu günlerde acil çevirileri götürme bahanesiyle anlatıcı, Raif Efendi’nin evine gidip gelmeye başlar. Anlatıcı, Raif Efendi’nin aile hayatını da gözlemleme fırsatı bulur. Karısının bütün ailesiyle birlikte küçücük bir evde yaşayan Raif Efendi, kendi evinde de işyerindeki gibi davranışlara maruz kalmaktadır.
-</p>
-
-<p>
 Hikâye, Raif Efendi’nin gözünden ilerlemeye devam eder. Gençlik yıllarında baba mesleği olan sabunculuğun modern yöntemlerini öğrenmek için Berlin’e gönderilen Raif Efendi, Almanca öğrenmek bahanesiyle bu işi sürekli erteler. Günlerini galerilere ve müzelere giderek geçirdiği sıralarda, bir sanat galerisinde Kürk Mantolu Madonna’nın otoportresini görür. Günlerce galeriye gelip bu portreye bakan Raif Efendi, daha sonra ressam Maria Puder ile tanışır. İkisi arasında bir ilişki başlar.
 </p>
 
+<p>
+Raif Efendi, Maria Puder’e âşık olmasına karşın, aynı karşılığı göremez. Sürekli birlikte vakit geçiren çift yılbaşı gecesinde de birliktedir. Maria Puder’in ne yaparsa yapsın Raif Efendi’yi sevemediği yönündeki sözleri nedeniyle ayrılırlar.
+</p>
 
-<p> 
-Raif Efendi, Maria Puder’e âşık olmasına karşın, aynı karşılığı göremez. Sürekli birlikte vakit geçiren çift yılbaşı gecesinde de birliktedir. Maria Puder’in ne yaparsa yapsın Raif Efendi’yi sevemediği yönündeki sözleri nedeniyle ayrılırlar.</p>
+
+
 
 
 
