--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page10.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page10.html
@@ -13,6 +13,9 @@ Roman, bankadaki işini kaybetmiş bir anlatıcıyla başlar. Anlatıcı Ankara 
 Anlatıcı, yeni işinde Raif Efendi adlı bir tercüman ile aynı ofisi paylaşmaktadır. Sık sık hastalanan, sessiz, sakin,  kendi halinde bir adam olan Raif Efendi, etrafındakiler tarafından ezilen, hor görülen, ancak bunlara hiçbir zaman tepki vermeyen, kendisine her söyleneni yapan bir adam olarak tanıtılır.
 </p>
 
+<p>
+    Raif Efendi ile anlatıcı ahbaplık yapmaya başlar. Hasta olduğu günlerde acil çevirileri götürme bahanesiyle anlatıcı, Raif Efendi’nin evine gidip gelmeye başlar. Anlatıcı, Raif Efendi’nin aile hayatını da gözlemleme fırsatı bulur. Karısının bütün ailesiyle birlikte küçücük bir evde yaşayan Raif Efendi, kendi evinde de işyerindeki gibi davranışlara maruz kalmaktadır.    
+</p>
 
 </div>
 <span class="page-number">10</span>
