--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page11.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page11.html
@@ -1,7 +1,7 @@
 <div class="book-content">
 
 <p class="no-indent">
-Anlatıcı, Raif Efendi’nin aile hayatını da gözlemleme fırsatı bulur. Karısının bütün ailesiyle birlikte küçücük bir evde yaşayan Raif Efendi, kendi evinde de işyerindeki gibi davranışlara maruz kalmaktadır.
+Karısının bütün ailesiyle birlikte küçücük bir evde yaşayan Raif Efendi, kendi evinde de işyerindeki gibi davranışlara maruz kalmaktadır.
 </p>
 
 <p>
