--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page10.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page10.html
@@ -14,7 +14,7 @@ Anlatıcı, yeni işinde Raif Efendi adlı bir tercüman ile aynı ofisi paylaş
 </p>
 
 <p>
-    Raif Efendi ile anlatıcı ahbaplık yapmaya başlar. Hasta olduğu günlerde acil çevirileri götürme bahanesiyle anlatıcı, Raif Efendi’nin evine gidip gelmeye başlar.    
+    Raif Efendi ile anlatıcı ahbaplık yapmaya başlar. Hasta olduğu günlerde acil çevirileri götürme bahanesiyle anlatıcı, Raif Efendi’nin evine gidip gelmeye başlar. Anlatıcı, Raif Efendi’nin aile hayatını da gözlemleme fırsatı bulur.    
 </p>
 
 </div>
