--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page18.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page18.html
@@ -1,27 +1,22 @@
 <div class="book-content">
 
 
-<h1>The Apple I</h1>
+<h1>Kişiler</h1>
 
 
-<h2>Homebrew</h2>
+<h2>Anlatıcı</h2>
 
 
 
 <p class="capital">
-While Steve had been away in India or Oregon, his geek friend Woz had
-been hired by Hewlett-Packard. To him, it was a dream job: a company full of passionate engineers just like him, where he could work on products for
-other engineers. However, in his spare time, he had cultivated his interest in designing computer circuits, and had joined a computer hobbyists
-association called the Homebrew Computer Club.
+Edebiyata meraklı, kendi halinde, hayatını bir şekilde sürdürmeye çalışan iddiasız bir kişiliktir. Romanda yer alan diğer kişiler gibi kendi kendine yetmeye çalışan, içine kapanık bir kişiliktir. Raif Efendi’nin iş arkadaşıdır. Romanda Raif Efendi’nin gizemli yaşamını çözmemizi sağlayan karakterdir.
 </p>
 
-
+<h2>Raif Efendi</h2>
 
 <p>
 
-Woz was impressed by the Altair (and by Microsoft’s BASIC interpreter), but
-he knew from his almost life-long experience in circuit design that he could do a much better job. So he started work on his own computer — which he
-decided to base on another
+Raif Efendi, tercümanlık işinde çalışan, kendi halinde, içine kapanık, sıkıntılarını başkalarına belli etmeyen bir kişiliğe sahiptir. Bu sessizliğinin ve içine dönüklüğünün nedeni bir kadına karşı duyduğu gizli sevdadır.
 </p>
 </div>
 <span class="page-number">18</span>
