--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page19.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page19.html
@@ -1,16 +1,15 @@
 <div class="book-content">
 
-<p class="center-pic">
-	<img src="samples/steve-jobs/pics/06.jpg" width="350" height="230">
-</p>
+<h2>Maria Puder</h2>
 
 <p class="no-indent">
-microprocessor, MOS’s Technology 502. This was his new goal in life. While keeping his job at HP, he worked very hard at
-this computer board, and came up with an impressive result; a powerful computer (for the time) which worked with a keyboard and screen, not one that flashed lights — and all with amazingly few chips.
+Romandaki Kürk Mantolu Madonna’dır. Raif Efendi’nin gizli sevdası, Almanya’da tanıyıp âşık olduğu ressamdır. O da Raif Efendi’ye karşı bir şeyler hissetmekte ancak duygularından emin olamamaktadır.
 </p>
 
+<h2>Diğer Karakterler</h2>
+
 <p>
-Woz showed his computer design to his friend Steve
+Romanda çok önemli rolü olmasa da bazı karakterler dikkat çeker. Bunlar: Hamdi Bey, Raif Efendi’nin eşi Mihriye Hanım, kızları Necla ve Nurten, Ferhunde Hanım ve eşi Nurettin Bey bunlardan bazılarıdır.
 </p>
 
 </div>
