--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page9.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page9.html
@@ -1,16 +1,18 @@
 <div class="book-content">
 
-<p class="center-pic">
-	<img src="samples/steve-jobs/pics/books.jpg?p" style="width:350px; height:230px;">
-</p>
-
-<p class="no-indent">
-of the iMac, iPod, iTunes, Apple Stores, and iPad.
-</p>
-
-
-<p>
-Jobs' abrasive personality, which simultaneously inspired and intimidated those around him, is a recurrent theme throughout. Details of his personal life are also included, including early relationships, his marriage of twenty years, and his four children and his early life. 
-
-</div>
-<span class="page-number">9</span>
+	<p class="no-indent">
+	Karısının bütün ailesiyle birlikte küçücük bir evde yaşayan Raif Efendi, kendi evinde de işyerindeki gibi davranışlara maruz kalmaktadır.
+	</p>
+	
+	<p>
+	Raif Efendi, Maria Puder’e âşık olmasına karşın, aynı karşılığı göremez. Sürekli birlikte vakit geçiren çift yılbaşı gecesinde de birliktedir. Maria Puder’in ne yaparsa yapsın Raif Efendi’yi sevemediği yönündeki sözleri nedeniyle ayrılırlar.
+	</p>
+	
+	
+	<p>
+		Hikâye, Raif Efendi’nin gözünden ilerlemeye devam eder. Gençlik yıllarında baba mesleği olan sabunculuğun modern yöntemlerini öğrenmek için Berlin’e gönderilen Raif Efendi, Almanca öğrenmek bahanesiyle bu işi sürekli erteler. Günlerini galerilere ve müzelere giderek geçirdiği sıralarda, bir sanat galerisinde Kürk Mantolu Madonna’nın otoportresini görür. Günlerce galeriye gelip bu portreye bakan Raif Efendi, daha sonra ressam Maria Puder ile tanışır. İkisi arasında bir ilişki başlar.    
+	</p>
+	
+	
+	</div>
+	<span class="page-number">9</span>
