--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page16.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page16.html
@@ -1,9 +1,10 @@
 <div class="book-content">
 
-    <h1>Zaman</h1>
+
+    <h1>Mekân</h1>
 
     <p>
-    Romanda iki farklı zaman kesiti görülür. Birincisi Ankara’da Rasim’in Raif Efendi’yi tanıdığı zaman, diğeri ise Raif Efendi’nin daha önce Almanya’da yaşadığı gizli aşkını anlatıldığı zaman kesitidir. Bu iki farklı zaman kesitinin anlatıcıları da farklıdır.
+    Raif Efendi ve Rasim’in yaşadıkları Ankara’da çalıştıkları işyeri, Raif Efendi’nin evi, Rasim’in kaldığı pansiyon. Esas olayların geçtiği Almanya’da ise Raif Efendi’nin kaldığı pansiyon, resim galerisi, Maria Puder’in evi belli başlı mekânlardır.
     </p>
 
 
