--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page5.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page5.html
@@ -3,9 +3,9 @@
 	<ul>
 		<li><a href="#page/7">Eser Hakkında <span>7</span></a></li>
 		<li><a href="#page/8">Romanın Özeti<span>8</span></a></li>
-		<li><a href="#page/12">Kişiler <span></span>12</a></li>
+		<li><a href="#page/12">Kişiler <span>12</span></a></li>
 		<li><a href="#page/14">Zaman <span>14</span></a></li>
-		<li><a href="#page/16">Mekân <span>16</span></a></li>
+		<li><a href="#page/15">Mekân <span>15</span></a></li>
 		<li><a href="#page/38">Romanın Türü <span>38</span></a></li>
 		<li><a href="#page/40">Konusu  <span>40</span></a></li>
 		<li><a href="#page/43">Dil ve Anlatım <span>43</span></a></li>
