--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page18.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page18.html
@@ -1,22 +1,15 @@
 <div class="book-content">
 
 
-<h1>Kişiler</h1>
-
-
-<h2>Anlatıcı</h2>
-
+<h1>Dil ve Anlatım</h1>
 
 
 <p class="capital">
-Edebiyata meraklı, kendi halinde, hayatını bir şekilde sürdürmeye çalışan iddiasız bir kişiliktir. Romanda yer alan diğer kişiler gibi kendi kendine yetmeye çalışan, içine kapanık bir kişiliktir. Raif Efendi’nin iş arkadaşıdır. Romanda Raif Efendi’nin gizemli yaşamını çözmemizi sağlayan karakterdir.
+Roman iki farklı anlatıcının bakış açısıyla anlatılmıştır. Bu anlatıcılar yoluyla “yabancılaşma” olgusuna pek çok açıdan yaklaşılmıştır. Kahraman anlatıcı ve Raif Efendi’nin iç dünyası ona ait bir anı defteri aracılığıyla dile getirilir. Gözlemci bakış açısı ise Maria Puder aracılığıyla dile getirilmektedir.
 </p>
 
-<h2>Raif Efendi</h2>
-
 <p>
-
-Raif Efendi, tercümanlık işinde çalışan, kendi halinde, içine kapanık, sıkıntılarını başkalarına belli etmeyen bir kişiliğe sahiptir. Bu sessizliğinin ve içine dönüklüğünün nedeni bir kadına karşı duyduğu gizli sevdadır.
+Roman genelde klasik bir anlatı tarzı kullansa da Raif Bey’in günlüğü “anlatı içinde anlatı” niteliği taşır.
 </p>
 </div>
 <span class="page-number">18</span>
