--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page14.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page14.html
@@ -2,7 +2,7 @@
 
     <h1>Zaman</h1>
 
-    <p>
+    <p class="capital">
     Romanda iki farklı zaman kesiti görülür. Birincisi Ankara’da Rasim’in Raif Efendi’yi tanıdığı zaman, diğeri ise Raif Efendi’nin daha önce Almanya’da yaşadığı gizli aşkını anlatıldığı zaman kesitidir. Bu iki farklı zaman kesitinin anlatıcıları da farklıdır.
     </p>
 
