--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page15.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page15.html
@@ -3,7 +3,7 @@
 
     <h1>Mekân</h1>
 
-    <p>
+    <p class="capital">
     Raif Efendi ve Rasim’in yaşadıkları Ankara’da çalıştıkları işyeri, Raif Efendi’nin evi, Rasim’in kaldığı pansiyon. Esas olayların geçtiği Almanya’da ise Raif Efendi’nin kaldığı pansiyon, resim galerisi, Maria Puder’in evi belli başlı mekânlardır.
     </p>
 
