--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page17.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page17.html
@@ -3,7 +3,7 @@
 
     <h1>Konusu</h1>
 
-    <p>
+    <p class="capital">
     Romanda işlenen konular; gizli aşk, yalnızlık ve içinde yaşanılan topluma yabancılaşmadır.
     </p>
 
