--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page19.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page19.html
@@ -1,16 +1,13 @@
 <div class="book-content">
 
-<h2>Maria Puder</h2>
 
-<p>
-Romandaki Kürk Mantolu Madonna’dır. Raif Efendi’nin gizli sevdası, Almanya’da tanıyıp âşık olduğu ressamdır. O da Raif Efendi’ye karşı bir şeyler hissetmekte ancak duygularından emin olamamaktadır.
-</p>
+	<h1>Genel Değerlendirme</h1>
+	
+	
+	<p class="capital">
+	Yazarın kendi hayatından da izler taşıyan roman, görünüşte gizli bir aşkı anlatır. Ancak roman aslında bireyin yaşadığı topluma yabancılaşması, yalnızlık ve toplumsal sorunları yansıtmaktadır. Yazarın en çok sevilen ve okunan romanı olma özelliğine sahip eser, bir dönemi yansıtması bakımından Türk edebiyatında önemli bir yere sahiptir.
+	</p>
+	
 
-<h2>Diğer Karakterler</h2>
-
-<p>
-Romanda çok önemli rolü olmasa da bazı karakterler dikkat çeker. Bunlar: Hamdi Bey, Raif Efendi’nin eşi Mihriye Hanım, kızları Necla ve Nurten, Ferhunde Hanım ve eşi Nurettin Bey bunlardan bazılarıdır.
-</p>
-
-</div>
-<span class="page-number">19</span>
+	</div>
+	<span class="page-number">19</span>
