--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page20.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page20.html
@@ -1,20 +1,16 @@
 <div class="book-content">
 
+<h1>Sabahattin Ali</h1>
 
-<p class="no-indent">
-Jobs. Steve was impressed. He did not know much about engineering, but he could see
-there was a demand for having a computer to write software for, a computer for software hobbyists. He was especially excited to see that a lot
-of the qualified engineers at Homebrew were talking about Woz’s computer with admiration. So he suggested to sell it to them. He and Woz would
-assemble the computers themselves and sell the whole board at Homebrew meetings.
+<h2>Hayatı</h2>
+
+<p class="capital">
+Sabahattin Ali, 25 Şubat 1907’de Bulgaristan’da Gümülcine Sancağı’na bağlı Eğridere’de dünyaya geldi. Babası piyade yüzbaşısı Ali Salahattin Bey, annesi Hüsniye Hanım’dır. Salahattin Bey, ilk oğluna dostu Prens Sabahattin’in, ikinci oğluna dostu Tevfik Fikret’in adını verdi. Sabahattin ve Fikret’e uzun bir aradan sonra bir de kız kardeş katıldı. Salahattin Bey, Birinci Dünya Savaşı yıllarında “Divan-ı Harb Örfi Reisi” olarak Çanakkale’ye çağrıldı. Aile dört yıl boyunca Çanakkale’de yaşadı, daha sonra Edremit’e taşındılar.
 </p>
 
-<h2>“Our own company”</h2>
-
-<blockquote>
-Steve had a good argument. We were in his car and he said — and I can remember him saying this like it was yesterday: “Well, even if we lose money, we’ll have a company. For once in our lives, we’ll have a company.” That convinced me. And I was excited to think about us like that. To be two best friends starting a company.
-</blockquote>
-
-<cite>Steve Wozniak in iWoz</cite>
+<p>
+Sabahattin, içine kapanık bir çocukluk yaşadı. Arkadaşlarıyla oynamaktansa evinde kitap okumayı ya da resim yapmayı tercih ediyordu. Başarılı bir öğrenciydi. Eğitimine 7 yaşında İstanbul Üsküdar’da başladı. Daha sonra Çanakkale İptidai Mektebine devam etti. Ancak seferberlik ilan edilince okul öğretmensiz kaldığı için kapatıldı. Sabahattin, eğitimine Edremit’te devam etti. Okumaya karşı büyük ilgisi vardı. 1921 yılında Edremit İptidai Mektebinden mezun oldu.
+</p>
 
 </div>
 <span class="page-number">20</span>
