--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page22.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page22.html
@@ -1,13 +1,13 @@
 <div class="book-content">
 
 
-<p class="no-indent">
-Woz was disappointed as his goal was to work for HP his whole life. He would have been delighted if HP had done a personal computer based on his design. It wasn’t Steve Jobs’ intention though.
+<p>
+Sabahattin Ali, Yozgat’ta bir yıl geçirdikten sonra eğitim amacıyla Almanya’ya gönderildi. Özel bir kurumda Almanca kurslarına başladı. Kurstan sonra Berlin’de yatılı bir okula yerleşti. Almanya’da ikinci yılını tamamlayamadan, 1930’da Türkiye’ye döndü. İstanbul Yüksek Muallim Mektebinde yatılı okuyan Nihal Adsız, Nihad Sami Banarlı, Orhan Şaik Gökyay gibi arkadaşlarının yanında kaldı. Bir süre sonra Bursa Orhaneli ilçesine ilkokul öğretmeni olarak atandı.
 </p>
 
 <p>
-<img class="left-pic zoom-this" src="samples/steve-jobs/pics/07.jpg" width="172" height="214">
-Apple Computer’s first order was from a Homebrew member called Paul Terrel. He was starting a new computer store called the Byte Shop, in Mountain View, and understood just like Steve that there was a demand for such fully-built computers. He ordered 50 of them, at $500 a piece. That was $25,000! It was a huge starting point for the young company, and got Steve and Woz very excited. They started putting together the parts in the Jobses’s garage, with help from
+<img class="left-pic zoom-this" src="kitap-inceleme/kurk-mantolu-madonna/pics/Sabahattin_ali.jpg" width="172" height="214">
+1930’da Gazi Terbiye Enstitüsünde açılan Almanca yeterlilik sınavına girdi. Aydın Ortaokulunda Almanca öğretmenliğine başladı. Ancak bir süre sonra komünizm propagandası yaptığı iddiasıyla hakkında soruşturma başlatıldı. Tutuklanarak bir süre cezaevinde yattı. Cezaevinden çıkınca Konya Ortaokuluna Almanca öğretmeni olarak atandı.
 </p>
 
 </div>
