--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page21.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page21.html
@@ -1,17 +1,12 @@
 <div class="book-content">
 
-
-<p>
-To get the necessary $1,000 to start building the first boards, Steve sold his Volkswagen van, and Woz his HP 65 calculator. They thought about how to call the new company, and couldn’t come up with a good name, until one day, Steve said that they would call it Apple if they didn’t and anything better. And they didn’t — so Apple Computer was born.
-</p>
-
-<p>
-The two friends sought help, and they got it from one of Steve’s colleagues from Atari, Ron Wayne. Wayne basically wrote the necessary paperwork to start a corporation — and drew the company’s first logo. As a result, he got 10% of the company’s shares, while Steve and Woz split the rest (45% each).
-</p>
-
-<p>
-Another problem was that Woz was still working for HP, and under the terms of his contract, all his work belonged to the corporation. The Apple computer was technically HP property. But Woz showed it to his bosses and they simply didn’t care about it.
-</p>
-
-</div>
-<span class="page-number">21</span>
+    <p>
+    Sabahattin, Balıkesir’e dönerek muallim mektebine (öğretmen okulu) kaydoldu. Okul hayatı boyunca şiirler, hikâyeler yazdı. Kendini geliştirmek için gazete ve dergilere yazılar gönderdi. Arkadaşlarıyla birlikte bir okul gazetesi çıkardı. Günlük de tutuyordu. Sanata olan bağını güçlendirmek için sinema ve tiyatroya gitti. Okul müdürünün de yardımıyla naklini İstanbul’a aldırdı. Burada tanıdığı edebiyat öğretmeni Ali Canip Yöntem, ona destek oldu. Bir taraftan öğrenimine devam ederken diğer taraftan “Çağlayan” ve “Akbaba” dergilerinde şiir ve hikâyeleri yayınlandı. 21Ağustos 1927’de öğretmenlik diplomasını aldı.
+    </p>
+    
+    <p>
+    Sabahattin Ali’nin ilk görev yeri Yozgat Merkez Cumhuriyet İlkokulu oldu. Bir süre sonra ailesi de Sabahattin’in yanına gitti. Stajyerlik yaptığı sırada tanıştığı Nahit Hanım’a karşılıksız bir aşk besliyor ve ona şiirler yazıyordu. Servet-i Fünun dergisinde yayınlanan “Bir Macera” şiirini ona ithaf etmişti.
+    </p>
+    
+    </div>
+    <span class="page-number">21</span>
