--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page21.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page21.html
@@ -1,6 +1,10 @@
 <div class="book-content">
 
     <p>
+        Ancak seferberlik ilan edilince okul öğretmensiz kaldığı için kapatıldı. Sabahattin, eğitimine Edremit’te devam etti. Okumaya karşı büyük ilgisi vardı. 1921 yılında Edremit İptidai Mektebinden mezun oldu.
+    </p>
+
+    <p>
     Sabahattin, Balıkesir’e dönerek muallim mektebine (öğretmen okulu) kaydoldu. Okul hayatı boyunca şiirler, hikâyeler yazdı. Kendini geliştirmek için gazete ve dergilere yazılar gönderdi. Arkadaşlarıyla birlikte bir okul gazetesi çıkardı. Günlük de tutuyordu. Sanata olan bağını güçlendirmek için sinema ve tiyatroya gitti. Okul müdürünün de yardımıyla naklini İstanbul’a aldırdı. Burada tanıdığı edebiyat öğretmeni Ali Canip Yöntem, ona destek oldu. Bir taraftan öğrenimine devam ederken diğer taraftan “Çağlayan” ve “Akbaba” dergilerinde şiir ve hikâyeleri yayınlandı. 21Ağustos 1927’de öğretmenlik diplomasını aldı.
     </p>
     
