--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page22.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page22.html
@@ -6,8 +6,8 @@ Sabahattin Ali, Yozgat’ta bir yıl geçirdikten sonra eğitim amacıyla Almany
 </p>
 
 <p>
-<img class="left-pic zoom-this" src="kitap-inceleme/kurk-mantolu-madonna/pics/Sabahattin_ali.jpg" width="172" height="214">
-1930’da Gazi Terbiye Enstitüsünde açılan Almanca yeterlilik sınavına girdi. Aydın Ortaokulunda Almanca öğretmenliğine başladı. Ancak bir süre sonra komünizm propagandası yaptığı iddiasıyla hakkında soruşturma başlatıldı. Tutuklanarak bir süre cezaevinde yattı. Cezaevinden çıkınca Konya Ortaokuluna Almanca öğretmeni olarak atandı.
+<img class="left-pic zoom-this" src="samples/steve-jobs/pics/Sabahattin_ali.jpg" width="172" height="214">
+1930’da Gazi Terbiye Enstitüsünde açılan Almanca yeterlilik sınavına girdi. Aydın Ortaokulunda Almanca öğretmenliğine başladı. Ancak bir süre sonra komünizm propagandası yaptığı iddiasıyla hakkında soruşturma başlatıldı. Tutuklanarak bir süre cezaevinde yattı.
 </p>
 
 </div>
