--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page23.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page23.html
@@ -1,20 +1,16 @@
 <div class="book-content">
 
 
-<p class="no-indent">
- Steve’s sister Patti and his friend from Reed, Dan Kottke. They paid them $1 a board. The parts for the Apple cost $220, while the computer was sold to Terrel for $500, who would usually put it in wooden boxes.
+<p>
+Cezaevinden çıkınca Konya Ortaokuluna Almanca öğretmeni olarak atandı.
 </p>
 
 <p>
-Steve and Woz also started selling the computer on their own. They agreed
-on the retail price of $666.66 (note that his price was based on a simple calculation — a 33% margin — and had nothing to do with the Satanic
-number of course). They showed it to the Homebrew folks in March 1976, but the response wasn’t that enthusiastic. So they went elsewhere, going
-from store to store and trying to sell them. They sold a couple hundreds this way.
+Sabahattin Ali, 22 Aralık 1932’de bir toplantıda okuduğu şiiriyle devlet yöneticilerini yerdiği gerekçesiyle tutuklanarak, Konya Asliye Ceza Mahkemesi tarafından bir yıl hapis cezasına çarptırıldı. Temyiz mahkemesi cezayı iki ay daha uzattı. Aldığı cezanın ardından, 29 Mayıs 1933’te memurluk kaydı silindi ve Sinop Cezaevine gönderildi. Cezaevinde sürekli okuyor ve yazıyordu. Burada edindiği tecrübeler eserlerinin bazılarına konu oldu. Cumhuriyetin onuncu kuruluş yıl dönümü nedeniyle çıkan aftan yararlanarak, cezasının onuncu ayında serbest bırakıldı.
 </p>
 
 <p>
-This was the start of Apple Computer. Steve and Woz had bought the other
-co-founder Ron Wayne out for $800, and incorporated the company on April 1, 1976.
+Sabahattin Ali, uzun bir bekleyiş ve uğraş sonucu 1934’te Orta Tedrisat Şube Müdürlüğü’ne daha sonra da asli görevi Milli Talim ve Terbiyeye atandı. Görevine atanmak için beklerken Ayşe Hanım’a bir mektup yazdı. Mektubun sonunda evlenme teklifi vardı. Ayşe Hanım, bu teklifi şaka olarak kabul ettiğini yazarak reddetti. Eski aşklarından Nahit Hanım başka biriyle evlenmişti. Aklına Aliye Hanım düştü. Aliye Hanım’ın ailesi bu evliliğe karşıydı. Ancak kızlarının ısrarı üzerine bu evliliğe razı oldular.
 </p>
 
 </div>
