--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page20.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page20.html
@@ -9,7 +9,7 @@ Sabahattin Ali, 25 Şubat 1907’de Bulgaristan’da Gümülcine Sancağı’na 
 </p>
 
 <p>
-Sabahattin, içine kapanık bir çocukluk yaşadı. Arkadaşlarıyla oynamaktansa evinde kitap okumayı ya da resim yapmayı tercih ediyordu. Başarılı bir öğrenciydi. Eğitimine 7 yaşında İstanbul Üsküdar’da başladı. Daha sonra Çanakkale İptidai Mektebine devam etti. Ancak seferberlik ilan edilince okul öğretmensiz kaldığı için kapatıldı. Sabahattin, eğitimine Edremit’te devam etti. Okumaya karşı büyük ilgisi vardı. 1921 yılında Edremit İptidai Mektebinden mezun oldu.
+Sabahattin, içine kapanık bir çocukluk yaşadı. Arkadaşlarıyla oynamaktansa evinde kitap okumayı ya da resim yapmayı tercih ediyordu. Başarılı bir öğrenciydi. Eğitimine 7 yaşında İstanbul Üsküdar’da başladı. Daha sonra Çanakkale İptidai Mektebine devam etti.
 </p>
 
 </div>
