--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page20.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page20.html
@@ -9,7 +9,7 @@ Sabahattin Ali, 25 Şubat 1907’de Bulgaristan’da Gümülcine Sancağı’na 
 </p>
 
 <p>
-Sabahattin, içine kapanık bir çocukluk yaşadı. Arkadaşlarıyla oynamaktansa evinde kitap okumayı ya da resim yapmayı tercih ediyordu. Başarılı bir öğrenciydi. Eğitimine 7 yaşında İstanbul Üsküdar’da başladı. Daha sonra Çanakkale İptidai Mektebine devam etti.
+Sabahattin, içine kapanık bir çocukluk yaşadı. Arkadaşlarıyla oynamaktansa evinde kitap okumayı ya da resim yapmayı tercih ediyordu. Başarılı bir öğrenciydi.
 </p>
 
 </div>
