--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page21.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page21.html
@@ -1,7 +1,7 @@
 <div class="book-content">
 
     <p>
-        Ancak seferberlik ilan edilince okul öğretmensiz kaldığı için kapatıldı. Sabahattin, eğitimine Edremit’te devam etti. Okumaya karşı büyük ilgisi vardı. 1921 yılında Edremit İptidai Mektebinden mezun oldu.
+    Eğitimine 7 yaşında İstanbul Üsküdar’da başladı. Daha sonra Çanakkale İptidai Mektebine devam etti. Ancak seferberlik ilan edilince okul öğretmensiz kaldığı için kapatıldı. Sabahattin, eğitimine Edremit’te devam etti. Okumaya karşı büyük ilgisi vardı. 1921 yılında Edremit İptidai Mektebinden mezun oldu.
     </p>
 
     <p>
@@ -9,7 +9,7 @@
     </p>
     
     <p>
-    Sabahattin Ali’nin ilk görev yeri Yozgat Merkez Cumhuriyet İlkokulu oldu. Bir süre sonra ailesi de Sabahattin’in yanına gitti. Stajyerlik yaptığı sırada tanıştığı Nahit Hanım’a karşılıksız bir aşk besliyor ve ona şiirler yazıyordu. Servet-i Fünun dergisinde yayınlanan “Bir Macera” şiirini ona ithaf etmişti.
+    Sabahattin Ali’nin ilk görev yeri Yozgat Merkez Cumhuriyet İlkokulu oldu. Bir süre sonra ailesi de Sabahattin’in yanına gitti.
     </p>
     
     </div>
