--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page22.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page22.html
@@ -2,7 +2,7 @@
 
 
 <p>
-Sabahattin Ali, Yozgat’ta bir yıl geçirdikten sonra eğitim amacıyla Almanya’ya gönderildi. Özel bir kurumda Almanca kurslarına başladı. Kurstan sonra Berlin’de yatılı bir okula yerleşti. Almanya’da ikinci yılını tamamlayamadan, 1930’da Türkiye’ye döndü. İstanbul Yüksek Muallim Mektebinde yatılı okuyan Nihal Adsız, Nihad Sami Banarlı, Orhan Şaik Gökyay gibi arkadaşlarının yanında kaldı. Bir süre sonra Bursa Orhaneli ilçesine ilkokul öğretmeni olarak atandı.
+    Stajyerlik yaptığı sırada tanıştığı Nahit Hanım’a karşılıksız bir aşk besliyor ve ona şiirler yazıyordu. Servet-i Fünun dergisinde yayınlanan “Bir Macera” şiirini ona ithaf etmişti. Sabahattin Ali, Yozgat’ta bir yıl geçirdikten sonra eğitim amacıyla Almanya’ya gönderildi. Özel bir kurumda Almanca kurslarına başladı. Kurstan sonra Berlin’de yatılı bir okula yerleşti. Almanya’da ikinci yılını tamamlayamadan, 1930’da Türkiye’ye döndü. İstanbul Yüksek Muallim Mektebinde yatılı okuyan Nihal Adsız, Nihad Sami Banarlı, Orhan Şaik Gökyay gibi arkadaşlarının yanında kaldı. Bir süre sonra Bursa Orhaneli ilçesine ilkokul öğretmeni olarak atandı.
 </p>
 
 <p>
