--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page23.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page23.html
@@ -2,7 +2,7 @@
 
 
 <p>
-Cezaevinden çıkınca Konya Ortaokuluna Almanca öğretmeni olarak atandı.
+Tutuklanarak bir süre cezaevinde yattı. Cezaevinden çıkınca Konya Ortaokuluna Almanca öğretmeni olarak atandı.
 </p>
 
 <p>
