--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page22.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page22.html
@@ -6,7 +6,7 @@ Sabahattin Ali’nin ilk görev yeri Yozgat Merkez Cumhuriyet İlkokulu oldu. Bi
 </p>
 
 <p>
-1930’da Gazi Terbiye Enstitüsünde açılan Almanca yeterlilik sınavına girdi. Aydın Ortaokulunda Almanca öğretmenliğine başladı. Ancak bir süre sonra komünizm propagandası yaptığı iddiasıyla hakkında soruşturma başlatıldı. Tutuklanarak bir süre cezaevinde yattı.
+1930’da Gazi Terbiye Enstitüsünde açılan Almanca yeterlilik sınavına girdi. Aydın Ortaokulunda Almanca öğretmenliğine başladı. Ancak bir süre sonra komünizm propagandası yaptığı iddiasıyla hakkında soruşturma başlatıldı.
 </p>
 
 </div>
