--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page23.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page23.html
@@ -10,7 +10,7 @@ Sabahattin Ali, 22 Aralık 1932’de bir toplantıda okuduğu şiiriyle devlet y
 </p>
 
 <p>
-Sabahattin Ali, uzun bir bekleyiş ve uğraş sonucu 1934’te Orta Tedrisat Şube Müdürlüğü’ne daha sonra da asli görevi Milli Talim ve Terbiyeye atandı. Görevine atanmak için beklerken Ayşe Hanım’a bir mektup yazdı. Mektubun sonunda evlenme teklifi vardı. Ayşe Hanım, bu teklifi şaka olarak kabul ettiğini yazarak reddetti. Eski aşklarından Nahit Hanım başka biriyle evlenmişti. Aklına Aliye Hanım düştü. Aliye Hanım’ın ailesi bu evliliğe karşıydı. Ancak kızlarının ısrarı üzerine bu evliliğe razı oldular.
+Sabahattin Ali, uzun bir bekleyiş ve uğraş sonucu 1934’te Orta Tedrisat Şube Müdürlüğü’ne daha sonra da asli görevi Milli Talim ve Terbiyeye atandı.
 </p>
 
 </div>
