--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page24.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page24.html
@@ -1,10 +1,16 @@
 <div class="book-content">
 
-
-<p class="center-pic">
-<img src="samples/steve-jobs/pics/08.jpg" width="350" height="230" style="margin:100px 0px;" class="zoom-this">
+<p>
+Görevine atanmak için beklerken Ayşe Hanım’a bir mektup yazdı. Mektubun sonunda evlenme teklifi vardı. Ayşe Hanım, bu teklifi şaka olarak kabul ettiğini yazarak reddetti. Eski aşklarından Nahit Hanım başka biriyle evlenmişti. Aklına Aliye Hanım düştü. Aliye Hanım’ın ailesi bu evliliğe karşıydı. Ancak kızlarının ısrarı üzerine bu evliliğe razı oldular.
 </p>
 
+<p>
+Sabahattin Ali, 16 Mayıs 1935’te Aliye Hanım’la evlendi. 1937 yılında İstanbul Eski Harbiye’de askerliğe başladı. Askerliğini yedek subay olarak tamamladı. Kızları Filiz de bu süreçte doğdu. Askerlik görevi bitince Musiki Muallim Mektebine Türkçe öğretmeni olarak atandı.
+</p>
+
+<p>
+Ankara’da öğretmenliği esnasında Azra Erhat, Sabahattin Eyüboğlu gibi pek çok isimle dostluk kurdu. Edebi çalışmalarını yoğunlaştıran yazar, 1939 yılında “İçimizdeki Şeytan” adlı romanını yayınladı. Roman çeşitli siyasi tartışmalara neden oldu. Bu sıralarda İkinci Dünya Savaşı çıktığı için tekrar askere çağrıldı. Görev yeri İstanbul’du. Bu dönemde “Kürk Mantolu Madonna”yı yazdı. Eser, Hakikat gazetesinde bölümler halinde yayınlandı. Bu arada Nihal Atsız ile mahkemeye uzanacak sertlikte tartışmalara girdi. Davanın ardından tam görevinin başına dönmüştü ki üçüncü kez askere çağrıldı. Çankırı’da bir buçuk ay kaldıktan sonra mesleğine geri döndü.
+</p>
 
 </div>
 <span class="page-number">24</span>
