--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page24.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page24.html
@@ -9,7 +9,7 @@ Sabahattin Ali, 16 Mayıs 1935’te Aliye Hanım’la evlendi. 1937 yılında İ
 </p>
 
 <p>
-Ankara’da öğretmenliği esnasında Azra Erhat, Sabahattin Eyüboğlu gibi pek çok isimle dostluk kurdu. Edebi çalışmalarını yoğunlaştıran yazar, 1939 yılında “İçimizdeki Şeytan” adlı romanını yayınladı. Roman çeşitli siyasi tartışmalara neden oldu. Bu sıralarda İkinci Dünya Savaşı çıktığı için tekrar askere çağrıldı. Görev yeri İstanbul’du. Bu dönemde “Kürk Mantolu Madonna”yı yazdı. Eser, Hakikat gazetesinde bölümler halinde yayınlandı. Bu arada Nihal Atsız ile mahkemeye uzanacak sertlikte tartışmalara girdi. Davanın ardından tam görevinin başına dönmüştü ki üçüncü kez askere çağrıldı. Çankırı’da bir buçuk ay kaldıktan sonra mesleğine geri döndü.
+Ankara’da öğretmenliği esnasında Azra Erhat, Sabahattin Eyüboğlu gibi pek çok isimle dostluk kurdu. Edebi çalışmalarını yoğunlaştıran yazar, 1939 yılında “İçimizdeki Şeytan” adlı romanını yayınladı. Roman çeşitli siyasi tartışmalara neden oldu. Bu sıralarda İkinci Dünya Savaşı çıktığı için tekrar askere çağrıldı.
 </p>
 
 </div>
