--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page25.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page25.html
@@ -1,20 +1,12 @@
 <div class="book-content">
 
-<h1>Apple’s early days</h1>
 
-<p class="capital">
-The day he finished work on his first computer, Woz started working on an improved design, the future Apple II. The Apple II was based on the Apple I’s design, but in many ways it was a huge breakthrough.
+<p>
+Görev yeri İstanbul’du. Bu dönemde “Kürk Mantolu Madonna”yı yazdı. Eser, Hakikat gazetesinde bölümler halinde yayınlandı. Bu arada Nihal Atsız ile mahkemeye uzanacak sertlikte tartışmalara girdi. Davanın ardından tam görevinin başına dönmüştü ki üçüncü kez askere çağrıldı. Çankırı’da bir buçuk ay kaldıktan sonra mesleğine geri döndü.
 </p>
 
 <p>
-First, it ran a lot faster with half as many chips. It also was the first computer that could produce color, with any color TV you would plug it into. It could
-handle high-resolution graphics and sound, and had a BASIC interpreter built-in. In short, it was the first computer that anybody who knew the
-BASIC programming language could use: it had what it took to launch the personal computing revolution.
-</p>
-
-<p>
-The prototype for the Apple II was almost ready when Steve and Woz
-partook in the Personal Computer
+Sabahattin Ali, 1944 yılından sonra yazılarında sert bir dil kullanmaya başladı. Eleştirel bir tavırla yazıyordu. Siyasete olan ilgisi de artmıştı. 1946’da İstanbul’a gitti ve Aziz Nesin ile birlikte “Markopaşa” dergisini çıkardı. Dergi pek çok siyasi tartışmalara konu oldu. Dergi hakkında çeşitli davalar açıldı. Yazıların sorumlusu olduğu için Sabahattin Ali tutuklandı. Bir süre cezaevinde yattı. 1947’de tahliye oldu. Ardından dergi kapatıldı. Sonrasında “Merhum Paşa”, “Malum Paşa” gazeteleri ve “Ali Baba” dergisi çıkarıldı. Dergide “Sırça Köşk” adlı öyküsü yayınlandı. Öykü, Bakanlar Kurulu Kararıyla toplatıldı. Sabahattin Ali, tutuklanarak Sultanahmet Cezaevi’ne gönderildi. 31 Aralık 1947’de serbest bırakıldı.
 </p>
 
 </div>
