--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page26.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page26.html
@@ -1,17 +1,7 @@
 <div class="book-content">
 
-<p class="no-indent">
-Festival, held in Atlantic City in the summer of 1976. But it was not ready enough to be shown to the public.
-Steve and his friend Dan Kottke were trying to sell the Apple I from their Apple Computer booth, while Woz was working on finishing the Apple II.
-The visitors were not impressed by the Apple I, a board sold by two amateur bearded young men, while MITS, which sold the Altair, had a huge
-booth with music, dancers and business suits. Steve learned a lot that day.
-</p>
-
 <p>
-After the Apple II was finished, Steve went looking for investors. He talked to several venture capitalists, who were already legions in the Valley. The
-first to show up was Don Valentine. He turned Steve and Woz down, but he did give them a hand by passing them the name of another potential
-investor, Mike Markkula. Mike was a former Intel employee who had made millions and retired early. He was 34 when he met with Woz and Steve, and
-he bought into their vision. He was also quite aware of the potential returns on his
+Hakkında açılan davalardan bunalan Sabahattin Ali, yurtdışına çıkmak istedi. Ancak kendisine pasaport verilmediği için bunu kaçak yollardan yapmaya karar verdi. Bulgaristan sınırını geçerek Avrupa’ya ulaşmak istiyordu. Tanıştırıldığı Ali Ertekin ile Kırklareli’ne doğru kamyonla yola çıktılar. Ali Ertekin, Sabahattin Ali’yi fırsatını bulduğu anda kafasına sopayla vurarak öldürdü. Bunu milli duygularla yaptığını söyledi. İdamla yargılanmasına rağmen dört yıl hüküm giydi ve kısa bir süre sonra serbest bırakıldı. Sabahattin Ali’nin ölüm tarihi, 2 Nisan 1948 olarak kabul edildi.
 </p>
 
 </div>
