--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page25.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page25.html
@@ -6,7 +6,7 @@ Görev yeri İstanbul’du. Bu dönemde “Kürk Mantolu Madonna”yı yazdı. E
 </p>
 
 <p>
-Sabahattin Ali, 1944 yılından sonra yazılarında sert bir dil kullanmaya başladı. Eleştirel bir tavırla yazıyordu. Siyasete olan ilgisi de artmıştı. 1946’da İstanbul’a gitti ve Aziz Nesin ile birlikte “Markopaşa” dergisini çıkardı. Dergi pek çok siyasi tartışmalara konu oldu. Dergi hakkında çeşitli davalar açıldı. Yazıların sorumlusu olduğu için Sabahattin Ali tutuklandı. Bir süre cezaevinde yattı. 1947’de tahliye oldu. Ardından dergi kapatıldı. Sonrasında “Merhum Paşa”, “Malum Paşa” gazeteleri ve “Ali Baba” dergisi çıkarıldı. Dergide “Sırça Köşk” adlı öyküsü yayınlandı. Öykü, Bakanlar Kurulu Kararıyla toplatıldı. Sabahattin Ali, tutuklanarak Sultanahmet Cezaevi’ne gönderildi. 31 Aralık 1947’de serbest bırakıldı.
+Sabahattin Ali, 1944 yılından sonra yazılarında sert bir dil kullanmaya başladı. Eleştirel bir tavırla yazıyordu. Siyasete olan ilgisi de artmıştı. 1946’da İstanbul’a gitti ve Aziz Nesin ile birlikte “Markopaşa” dergisini çıkardı. Dergi pek çok siyasi tartışmalara konu oldu. Dergi hakkında çeşitli davalar açıldı. Yazıların sorumlusu olduğu için Sabahattin Ali tutuklandı. Bir süre cezaevinde yattı. 1947’de tahliye oldu. Ardından dergi kapatıldı. Sonrasında “Merhum Paşa”, “Malum Paşa” gazeteleri ve “Ali Baba” dergisi çıkarıldı. Dergide “Sırça Köşk” adlı öyküsü yayınlandı. Öykü, Bakanlar Kurulu Kararıyla toplatıldı.
 </p>
 
 </div>
