--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page26.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page26.html
@@ -1,6 +1,10 @@
 <div class="book-content">
 
 <p>
+Sabahattin Ali, tutuklanarak Sultanahmet Cezaevi’ne gönderildi. 31 Aralık 1947’de serbest bırakıldı.
+</p>
+
+<p>
 Hakkında açılan davalardan bunalan Sabahattin Ali, yurtdışına çıkmak istedi. Ancak kendisine pasaport verilmediği için bunu kaçak yollardan yapmaya karar verdi. Bulgaristan sınırını geçerek Avrupa’ya ulaşmak istiyordu. Tanıştırıldığı Ali Ertekin ile Kırklareli’ne doğru kamyonla yola çıktılar. Ali Ertekin, Sabahattin Ali’yi fırsatını bulduğu anda kafasına sopayla vurarak öldürdü. Bunu milli duygularla yaptığını söyledi. İdamla yargılanmasına rağmen dört yıl hüküm giydi ve kısa bir süre sonra serbest bırakıldı. Sabahattin Ali’nin ölüm tarihi, 2 Nisan 1948 olarak kabul edildi.
 </p>
 
