--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page28.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page28.html
@@ -1,11 +1,11 @@
 <div class="book-content">
 
-<p class="no-indent">
-Mike Markkula also insisted that Apple advertise for its new computer. He called up one of his friends, Regis McKenna, who was one of the most renowned advertisers in the Valley. While they worked with Steve Jobs on Apple’s first ads, an art director called Rob Janoff designed a new logo for the company. The only thing Steve asked him was: “Don’t make it cute.” He was the one who came up with the bitten apple (so that it wouldn’t look like a tomato), as well as the striped colors — to emphasize the Apple II’s ability to display color.
+<p>
+Romanlarında ilk bakışta bireysel temaların ön plana çıktığı görülür. Bunların başında “aşk” teması gelir. “Evlilik” teması işlediği ikinci önemli temadır. Bunu “çevre ve sosyal yaşamla uyuşamama”, “iletişimsizlik” gibi temalar izler. Romanlarda işçi, köylü, esnaf ve devlet kurumları arasındaki ilişkiler canlı bir biçimde ortaya konur. Bireysel temaların bir yön ve boyut kazanması bu ilişkiler çerçevesinde olur. Değişimlere ayak uyduramayan esnaf ve çiftçinin yavaş yavaş yok oluşu, sosyal adaletsizlik, bürokrasinin işlemeyişi ve her alanda görülen yozlaşmalar üzerinde durduğu en önemli sorunlardır. Aydın kesimdeki yozlaşma ise daha çok ahlaki, biraz da siyasi açıdan işlenir.
 </p>
 
 <p>
-Rod Holt, a friend of Steve Jobs’, was hired to build a switching power supply and design a mold for the Apple II’s plastic case. Mike Markkula later also hired a fourth guy, Mike Scott, to run the startup, whose first offices were moved to Stevens Creek Boulevard in Cupertino.
+Sabahattin Ali’nin şiirlerinde “aşk” sürekli işlediği temaların başında gelmektedir. Şiirlerinde toplumsal sorunlara fazla yer vermemiştir. Hapishanenin zorlu koşulları, karamsarlık, bunalma ve kaçış onun şiirlerinin diğer temalarını oluşturur.
 </p>
 
 </div>
