--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page27.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page27.html
@@ -1,18 +1,13 @@
 <div class="book-content">
 
-<p class="no-indent">
-investment:
+<h2>Edebi Kişiliği</h2>
+
+<p class="capital">
+Sabahattin Ali, Türk edebiyatının çok yönlü sanatçılarından biridir. Öykü, roman, şiir, oyun ve köşe yazıları yazmıştır. Sabahattin Ali’nin en başarılı olduğu tür öyküdür.
 </p>
 
-<blockquote>
-We’re going to be a Fortune 500 company in two years. This is the start of an industry. It happens once a decade.
-</blockquote>
-<cite>Mike Markkula to Steve and Woz, quoted in iWoz</cite>
-
 <p>
-<img class="left-pic zoom-this" src="samples/steve-jobs/pics/09.jpg" width="172" height="148">
-
-Mike drew up a business plan. He wanted to put in $250,000 to build 1,000 machines. This was a huge number by the young men’s standards. Woz was also told that for this to happen, he had to leave HP. At first he refused, since he was a huge admirer of HP and planned to work there his whole life. But Steve lobbied him hard into it, and in the end Woz relented.
+İlk öykülerini romantik bir tutumla yazan Sabahattin Ali, daha sonra yazdığı gerçekçiliğin ağır bastığı öyküleriyle yeni bir çığır açmıştır. Sosyal gerçekçilikten eleştirel gerçekçiliğe uzanan bir çizgide öykücülüğünü geliştirmiştir. Öykülerinde işlediği konu ve temalar; sevgi, kadın, hapishane, işçi ve köylü sorunlarıdır. Öykülerinde sade bir dil, yalın, duru ama yoğun bir anlatım kullanmıştır. Ağız özelliklerini öykülerine pek yansıtmamıştır. Bununla birlikte, anlattığı konuların özelliğine ve yaşamın gerektirdiği söz varlığına gereği kadar yer vermiştir. Anlatımı öykülerindeki konu, kişi ve çevreye bağlı olarak değişir. Yazar, olaylara kişilerin gözünden bakmakta, sözcüklerin seçimini de buna uygun olarak yapmaktadır.
 </p>
 
 
