--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page29.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page29.html
@@ -1,22 +1,17 @@
 <div class="book-content">
 
-<h2>The West Coast Computer Faire</h2>
-<p>
-The new company got ready to show off their product at the West Coast Computer Faire, a conference held in San Francisco in April 1977. It was only
-a prototype, but the plastic case definitely made the Apple II look like a professional product. Steve negotiated a prime spot for Apple’s booth, and
-took precious advice from both Mike Markkula and Regis McKenna. That’s why he bought his first suit for the occasion.
-</p>
+    <p>
+    Sabahattin Ali’nin gazetelerdeki köşe yazıları edebi, siyasi ve sosyal içeriklidir. Yazar, bu içerikleri belirlerken güncel olayları ve gelişmeleri de dikkate almaktadır. Yazılarının sert tepkilerle karşılamasının nedeni; çoğu zaman yöneticileri ve siyasi kişileri hedef almasındandır. Bu nedenle hakkında pek çok dava açılmış, kimilerinden beraat etmiş, kimilerinden ise kısa süreli cezalar almıştır.
+    </p>
+        
+    <p>
+    Dilde sadeliğe büyük önem veren Sabahattin Ali, bu görüşünü eserlerine de yansıtmıştır. Bazı eserlerini sadeleştirme gereği duyan yazar, bununla birlikte öz Türkçe konusunda aşırıya kaçılmasına karşıydı. Dilimize yerleşen ve Türkçeleşen kelimelerin de kullanılmasından yanaydı.
+    </p>
 
-<blockquote>
-My recollection is we stole the show
-</blockquote>
+    <p>
+    Edebi eserler üzerinden yapılan “eski-yeni” tartışmasını gereksiz bulan yazar, eserlerin “iyi-kötü” açısından değerlendirilmesi gerektiği görüşündeydi. Yeni ve kalitesiz yazılar yerine eski ve kaliteli yazıların okunmasının daha yerinde olacağını savundu.
+    </p>
 
-<cite>Steve Jobs in Triumph of the Nerds</cite>
-
-<p>
-Apple Computer received 300 orders for the Apple II on the show alone,
-twice as much as the total number of Apple I’s ever sold! But this was just the beginning.
-</p>
 
 </div>
 <span class="page-number">29</span>
