--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page30.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page30.html
@@ -1,18 +1,7 @@
 <div class="book-content">
 
-<h1>Success and failures</h1>
-
-<h2>The personal computing revolution</h2>
-<p class="capital">
-In many ways, the Apple II was both the start and the symbol of the personal computer revolution of the early 1980s. Although there were
-many competing personal computers on the market — such as the Commodore PET or Radio Schack’s TRS-80 — the Apple II clearly set itself
-apart very early on, and soon embodied the personal computer in the public consciousness. It was all over the media, and its sales skyrocketed
-throughout 1978, 1979 and 1980.
-</p>
-
 <p>
-It was not only about the Apple II’s appealing design, its integrated keyboard, or its ability to plug into any TV to display color graphics or play
-sounds. Its built-in BASIC interpreter was also critical to its success, as it made the writing of compatible software very easy. 
+Sabahattin Ali’ye göre sanatın bir amacı olmalıydı. Bu nedenle sanatın yalın bir yansıtma işi olduğu görüşüne karşı çıktı. Yazara göre sanat, insanı yükseltmek ve daha iyiye götürmek amacıyla yapılmalıydı. Halktan yana olmayan ve yüksek zümreye hitap eden eserler unutulmaya mahkûmdu. Öykü ve roman gibi türlerde kalıcı olabilmek için seçilen karakterlerin canlı, konuların da güncelliğini yitirmeyecek türden olması gerekiyordu. Bu nedenle eserler realist tarzda yazılmalıydı.
 </p>
 
 </div>
