--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page31.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page31.html
@@ -1,19 +1,18 @@
 <div class="book-content">
 
-<p class="no-indent">
-<p>
+<h2>Eserleri</h2>
 
+<h2>Öykü</h2>
+<p>Değirmen (1935), Kağnı (1936), Ses (1937), Yeni Dünya (1943), Sırça Köşk (1947)</p>
 
-Woz used it himself to write the 
-<img class="left-pic zoom-this" src="samples/steve-jobs/pics/10.jpg" width="150" height="345">
-first program to ever run on the machine, a game called Breakout. The eight expansion slots in Apple II made a difference, too. Woz decided to
-implement them against Steve Jobs’ will, and this proved a wise move, as they allowed for all kinds of new features and software to be added to the
-machine. One of those features was Disk II, a floppy disk drive Apple started shipping in early 1978. It made the sharing and installing of new software
-very easy — soon the supply of Apple II software was thriving.
-</p>
+<h2>Roman</h2>
+<p>Kuyucaklı Yusuf (1937), İçimizdeki Şeytan (1940), Kürk Mantolu Madonna (1943)</p>
 
-<p>
-But probably the most important push toward the
-</p>
+<h2>Şiir</h2>
+<p>Dağlar ve Rüzgâr (1934), Kurbağanın Serenadı (1937), Öteki Şiirler (1937)</p>
+
+<h2>Oyun(Tiyatro)</h2>
+<p>Esirler (1936)</p>
+
 </div>
 <span class="page-number">31</span>
