--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page31.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page31.html
@@ -2,16 +2,16 @@
 
 <h2>Eserleri</h2>
 
-<h2>Öykü</h2>
+<cite>Öykü</cite>
 <p>Değirmen (1935), Kağnı (1936), Ses (1937), Yeni Dünya (1943), Sırça Köşk (1947)</p>
 
-<h2>Roman</h2>
+<cite>Roman</cite>
 <p>Kuyucaklı Yusuf (1937), İçimizdeki Şeytan (1940), Kürk Mantolu Madonna (1943)</p>
 
-<h2>Şiir</h2>
+<cite>Şiir</cite>
 <p>Dağlar ve Rüzgâr (1934), Kurbağanın Serenadı (1937), Öteki Şiirler (1937)</p>
 
-<h2>Oyun(Tiyatro)</h2>
+<cite>Oyun(Tiyatro)</cite>
 <p>Esirler (1936)</p>
 
 </div>
