--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page31.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page31.html
@@ -3,16 +3,16 @@
 <h2>Eserleri</h2>
 
 <cite>Öykü</cite>
-<p>Değirmen (1935), Kağnı (1936), Ses (1937), Yeni Dünya (1943), Sırça Köşk (1947)</p>
+<p class="no-indent">Değirmen (1935), Kağnı (1936), Ses (1937), Yeni Dünya (1943), Sırça Köşk (1947)</p>
 
 <cite>Roman</cite>
-<p>Kuyucaklı Yusuf (1937), İçimizdeki Şeytan (1940), Kürk Mantolu Madonna (1943)</p>
+<p class="no-indent">Kuyucaklı Yusuf (1937), İçimizdeki Şeytan (1940), Kürk Mantolu Madonna (1943)</p>
 
 <cite>Şiir</cite>
-<p>Dağlar ve Rüzgâr (1934), Kurbağanın Serenadı (1937), Öteki Şiirler (1937)</p>
+<p class="no-indent">Dağlar ve Rüzgâr (1934), Kurbağanın Serenadı (1937), Öteki Şiirler (1937)</p>
 
 <cite>Oyun(Tiyatro)</cite>
-<p>Esirler (1936)</p>
+<p class="no-indent">Esirler (1936)</p>
 
 </div>
 <span class="page-number">31</span>
