--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page31.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page31.html
@@ -2,16 +2,16 @@
 
 <h2>Eserleri</h2>
 
-<cite>Öykü</cite>
+<p>Öykü</p>
 <p class="no-indent">Değirmen (1935), Kağnı (1936), Ses (1937), Yeni Dünya (1943), Sırça Köşk (1947)</p>
 
-<cite>Roman</cite>
+<p>Roman</p>
 <p class="no-indent">Kuyucaklı Yusuf (1937), İçimizdeki Şeytan (1940), Kürk Mantolu Madonna (1943)</p>
 
-<cite>Şiir</cite>
+<p>Şiir</p>
 <p class="no-indent">Dağlar ve Rüzgâr (1934), Kurbağanın Serenadı (1937), Öteki Şiirler (1937)</p>
 
-<cite>Oyun(Tiyatro)</cite>
+<p>Oyun(Tiyatro)</p>
 <p class="no-indent">Esirler (1936)</p>
 
 </div>
