--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page32.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page32.html
@@ -1,18 +1,22 @@
 <div class="book-content">
 
-<p class="no-indent">
-Apple II’s success was not from Apple. It was a piece of software called VisiCalc — the first
-spreadsheet ever brought to market. VisiCalc worked only on the Apple II, and it was a revolution in itself. Millions of accountants, small businesses, or
-even private individuals that cared about their money, could now do in minutes calculations that would have taken them weeks to perform by
-hand. They rushed out to computer stores and bought Apple IIs en masse, making Apple one of the most profitable companies of its day. Only four
-years after it was started in a garage, the company was well on its way to fullfil Mike Markkula’s vision of belonging to the Fortune 500 elite of
-corporate America.
+<h1>Sorular ve Cevaplar</h1>
+
+<p>
+Kürk Mantolu Madonna Ana fikri nedir?
+</p>
+<p>
+Kitaptan farklı ana fikirler çıkartmak mümkün fakat temel olarak bakıldığında iki hikayede de ön yargıların hayatımızı ne kadar değiştirdiğini görüyoruz. İlk hikayede yazar Raif Efendi’ye karşı ön yargılı yaklaşıyor ve onu tamamen yanlış tanımasına neden oluyor. Bunun sonunda da ön yargılı yaklaşması sonrası onu geç tanımasının pişmanlığını yaşıyor. İkinci hikayede ise Raif Efendi mektupların kesilmesi sonrası önyargılı davranıp Maria’nın onu terk ettiğini düşünüyor. Bunun pişmanlığını da yıllar sonra yaşıyor. Her iki durumda da önyargı nedeni ile karşısındaki konusunda kolay hükümler verip sonrasında bunun bedelini ağır ödeme durumu vardır.
 </p>
 
-<h2>Preparing for the future</h2>
+<p>Kürk Mantolu Madonna basıldığı yer ve tarih nedir?</p>
 <p>
-Apple Computer was growing at an incredibly fast rate. The numbers were
-mind-blowing: from 2,500 Apple IIs sold in 1977, 8,000 were sold in 1978, and up to 35,000 in 1979. Remember there was no market for
+Kürk Mantolu Madonna romanı ile olarak 18 Aralık 1940 ile 8 Şubat 1941 tarihleri arasında 48 bölüm olarak Hakikat gazetesinde Büyük Hikaye adı ile yayınlanmıştır. Daha sonra 1943 yılında roman haline getirilmiş ve yayınlanmıştır.
+</p>
+
+<p>Kürk Mantolu Madonna kaç sayfa?</p>
+<p>
+Kitabın ilk baskısı toplam 177 sayfadan oluşmaktaydı. 1943 günümüze bir çok yeniden basılan kitap en son baskısında 160 sayfa olarak basılmıştır.
 </p>
 
 </div>
