--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page33.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page33.html
@@ -1,17 +1,18 @@
 <div class="book-content">
 
-<p class="no-indent">
-personal computers before! The company earned $47 million in revenues in fiscal year 1979, making Steve Jobs a millionaire on paper (he owned $7 million
-worth of private stock). The company’s board of directors, including its new members such as Arthur Rock and Don Valentine, began to discuss taking
-Apple public.
-</p>
-<p>
-Meanwhile, the engineers in Cupertino started working on Apple’s future. Several projects came into being in those early years. First, in late 1978,
-there was the Apple III, which was supposed to build on Apple II’s legacy. Woz did not partake in the project and was critical of it early on. There was also an obscure project called Macintosh, headed by computer scientist Jef Raskin. He started to assemble a small team to work on a computer “as easy to use as a toaster”, that he named after his favorite apple.
-</p>
-
-<p>
-Steve Jobs was not involved in any of those projects.
-</p>
+    <p>Kürk Mantolu Madonna nerede geçiyor?</p>
+        <p>
+        Kitap iki farklı hikayeden oluşuyor. İlk hikaye Ankara’da geçiyor. İkinci hikaye ise çoğunluk olarak Almanya’nın Berlin şehrinde geçiyor. Bunun dışında kısa olarak da Havran'da geçiyor.
+        </p>
+        
+    <p>Kürk Mantolu Madonna romanının türü nedir?</p>
+        <p>
+        Kürk Mantolu Madonna romanı bir aşk romanıdır.
+        </p>
+        
+        <p>Kürk Mantolu Madonna kahramanları kimlerdir?</p>
+        <p>
+        İlk hikayenin kahramanı yazarın kendisi ve Raif Efendi’dir. Hamdi Bey, yazarın iş bulmasına vesile olan kişidir. Yazar yeni iş yerinde Raif Efendi ile tanışır. İlk hikayede aynı zamanda Raif Efendi’nin karısı Mihriye Hanım, küçük kızı Nurten, büyük kızı Necla, baldısı Ferhunde Hanım, baldızının kocası Nurettin Bey yer alır. İkinci hikayenin kahramanları ise Raif Efendi ve Maria Puder’dir.
+        </p>
 </div>
 <span class="page-number">33</span>
