--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page33.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page33.html
@@ -1,18 +1,12 @@
 <div class="book-content">
 
     <p>Kürk Mantolu Madonna nerede geçiyor?</p>
-        <p>
-        Kitap iki farklı hikayeden oluşuyor. İlk hikaye Ankara’da geçiyor. İkinci hikaye ise çoğunluk olarak Almanya’nın Berlin şehrinde geçiyor. Bunun dışında kısa olarak da Havran'da geçiyor.
-        </p>
+    <p class="no-indent">Kitap iki farklı hikayeden oluşuyor. İlk hikaye Ankara’da geçiyor. İkinci hikaye ise çoğunluk olarak Almanya’nın Berlin şehrinde geçiyor. Bunun dışında kısa olarak da Havran'da geçiyor.</p>
         
     <p>Kürk Mantolu Madonna romanının türü nedir?</p>
-        <p>
-        Kürk Mantolu Madonna romanı bir aşk romanıdır.
-        </p>
+    <p class="no-indent">Kürk Mantolu Madonna romanı bir aşk romanıdır.</p>
         
-        <p>Kürk Mantolu Madonna kahramanları kimlerdir?</p>
-        <p>
-        İlk hikayenin kahramanı yazarın kendisi ve Raif Efendi’dir. Hamdi Bey, yazarın iş bulmasına vesile olan kişidir. Yazar yeni iş yerinde Raif Efendi ile tanışır. İlk hikayede aynı zamanda Raif Efendi’nin karısı Mihriye Hanım, küçük kızı Nurten, büyük kızı Necla, baldısı Ferhunde Hanım, baldızının kocası Nurettin Bey yer alır. İkinci hikayenin kahramanları ise Raif Efendi ve Maria Puder’dir.
-        </p>
+    <p>Kürk Mantolu Madonna kahramanları kimlerdir?</p>
+    <p class="no-indent">İlk hikayenin kahramanı yazarın kendisi ve Raif Efendi’dir. Hamdi Bey, yazarın iş bulmasına vesile olan kişidir. Yazar yeni iş yerinde Raif Efendi ile tanışır. İlk hikayede aynı zamanda Raif Efendi’nin karısı Mihriye Hanım, küçük kızı Nurten, büyük kızı Necla, baldısı Ferhunde Hanım, baldızının kocası Nurettin Bey yer alır. İkinci hikayenin kahramanları ise Raif Efendi ve Maria Puder’dir.</p>
 </div>
 <span class="page-number">33</span>
