--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page34.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page34.html
@@ -1,20 +1,7 @@
 <div class="book-content">
 
-<p>
-He had another one in mind, called Lisa. And he hadn’t picked that name without a reason...
-Indeed, in 1978, while he was dating an employee of McKenna’s PR agency, Steve’s ex-girlfriend from high school Chris-Ann Brennan reappeared
-claiming she was bearing his baby. Steve denied the fatherhood, although everybody in his entourage knew he was the father. The baby girl was
-named Lisa... there was a lot of perplexity around Steve’s behavior, especially since he had suffered greatly from having been abandoned
-himself. He was going to do the same to his own daughter! Yet, at the very same time, he used the girl’s name for a project code name.
-</p>
-
-<p>
-Project Lisa took a dramatic turn in late 1979, after Steve’s visit to Xerox PARC.
-</p>
-<p>
-The Lisa team was briefed about Xerox PARC’s technologies by insiders, including Jef Raskin, the manager of the Macintosh project. Steve 
-negotiated a deal with Xerox to be given a complete tour of the
-</p>
+    <p>Kürk Mantolu Madonna kahramanları kimlerdir?</p>
+    <p class="no-indent">İlk hikayenin kahramanı yazarın kendisi ve Raif Efendi’dir. Hamdi Bey, yazarın iş bulmasına vesile olan kişidir. Yazar yeni iş yerinde Raif Efendi ile tanışır. İlk hikayede aynı zamanda Raif Efendi’nin karısı Mihriye Hanım, küçük kızı Nurten, büyük kızı Necla, baldısı Ferhunde Hanım, baldızının kocası Nurettin Bey yer alır. İkinci hikayenin kahramanları ise Raif Efendi ve Maria Puder’dir.</p>
 
 </div>
 <span class="page-number">34</span>
