--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page32.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page32.html
@@ -2,7 +2,7 @@
 
 <h1>Sorular ve Cevaplar</h1>
 
-<p>Kürk Mantolu Madonna Ana fikri nedir?</p>
+<cite>Kürk Mantolu Madonna Ana fikri nedir?</cite>
 <p class="no-indent">Kitaptan farklı ana fikirler çıkartmak mümkün fakat temel olarak bakıldığında iki hikayede de ön yargıların hayatımızı ne kadar değiştirdiğini görüyoruz. İlk hikayede yazar Raif Efendi’ye karşı ön yargılı yaklaşıyor ve onu tamamen yanlış tanımasına neden oluyor. Bunun sonunda da ön yargılı yaklaşması sonrası onu geç tanımasının pişmanlığını yaşıyor. İkinci hikayede ise Raif Efendi mektupların kesilmesi sonrası önyargılı davranıp Maria’nın onu terk ettiğini düşünüyor. Bunun pişmanlığını da yıllar sonra yaşıyor. Her iki durumda da önyargı nedeni ile karşısındaki konusunda kolay hükümler verip sonrasında bunun bedelini ağır ödeme durumu vardır.</p>
 
 </div>
