--- a/kitap-inceleme/kurk-mantolu-madonna/pages/page34.html
+++ b/kitap-inceleme/kurk-mantolu-madonna/pages/page34.html
@@ -1,6 +1,9 @@
 <div class="book-content">
 
-    <p>Kürk Mantolu Madonna kahramanları kimlerdir?</p>
+    <cite>Kürk Mantolu Madonna romanının türü nedir?</cite>
+    <p class="no-indent">Kürk Mantolu Madonna romanı bir aşk romanıdır.</p>
+
+    <cite>Kürk Mantolu Madonna kahramanları kimlerdir?</cite>
     <p class="no-indent">İlk hikayenin kahramanı yazarın kendisi ve Raif Efendi’dir. Hamdi Bey, yazarın iş bulmasına vesile olan kişidir. Yazar yeni iş yerinde Raif Efendi ile tanışır. İlk hikayede aynı zamanda Raif Efendi’nin karısı Mihriye Hanım, küçük kızı Nurten, büyük kızı Necla, baldısı Ferhunde Hanım, baldızının kocası Nurettin Bey yer alır. İkinci hikayenin kahramanları ise Raif Efendi ve Maria Puder’dir.</p>
 
 </div>
